--- a/1.html
+++ b/1.html
@@ -15,6 +15,10 @@ background: #ECF1E5;
         position: absolute;
         width: 257px;
         left: 707px;">
+        <img src="alice.png" onclick=window.location.href="3.html" style="    top: 1169px;
+        position: absolute;
+        width: 87px;
+        left: 813px;">
 </div>
 </body>
 </html>
